--- a/config.toml
+++ b/config.toml
@@ -35,7 +35,7 @@ enableEmoji = true
   name = "GK"
   location = "Boston, MA"
   location_avatar = "location.svg"
-  description = "By day I am a customer experience professional with time in a variety of customer facing roles for SaaS companies and non-profit organizations. I've had the opportunity to take on traditional customer support roles, as well as more technical challenges working on implementations and enablement. In my free time I have been enjoying continuing my cybersecurity studies and working on a few side projects that I hope to write about here."
+  description = "By day I am a customer experience professional with time in various customer-facing roles for SaaS companies and non-profit organizations. I've had the opportunity to take on traditional customer support roles and more technical challenges working on implementations and enablement. In my free time, I have enjoyed continuing my cybersecurity studies and working on a few side projects I hope to write about here."
 
 [[params.socialIcons]]
   name = "github"
