Stlying improvements at index. Updating homepage, bio.

--- a/config.toml
+++ b/config.toml
@@ -33,9 +33,9 @@ enableEmoji = true
   avatar = "GKavatar.png"
   intro = "George Kenneally"
   name = "GK"
-  location = "Boston, MA"
+  location = "Boston, Massachusetts"
   location_avatar = "location.svg"
-  description = "By day I am a customer experience professional with time in various customer-facing roles for SaaS companies and non-profit organizations. I've had the opportunity to take on traditional customer support roles and more technical challenges working on implementations and enablement. In my free time, I have enjoyed continuing my cybersecurity studies and working on a few side projects I hope to write about here."
+  description = "By day I am a customer experience professional with time in a variety of customer facing roles for SaaS companies and non-profit organizations. I've had the opportunity to contribute to traditional customer support teams, as well as in more technical roles working on implementations and enablement. In my free time I have been enjoying continuing my cybersecurity studies and working on a few side projects that I hope to write about here."
 
 [[params.socialIcons]]
   name = "github"
